<resources>
    <string name="app_name">App_Bateaux</string>
    <string name="login_d_un_responsable_de_dock">Bienvenue sur App_Bateaux</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="login">Login</string>
    <string name="se_connecter">Se connecter</string>
    <string name="docker">Docker :</string>
    <string name="logologin">logologin</string>
    <string name="menu">Menu</string>
    <string name="chargement_des_containers">Chargement des containers</string>
    <string name="r_sultats">Résultats</string>
    <string name="trier_par_anciennet">Trier par ancienneté</string>
    <string name="rechercher">Rechercher</string>
    <string name="poids">Poids</string>
    <string name="date">Date</string>
    <string name="coord">Coord</string>
    <string name="id">Id</string>
    <string name="charger_container">Charger un Container</string>
    <string name="affichage_des_containers">Affichage des Containers</string>
    <string name="liste_des_containers">Liste des containers</string>
    <string name="bateau_arriv">Bateau arrivé</string>
    <string name="todo">TODO</string>
    <string name="arriv_e_d_un_bateau">Arrivée d\'un bateau</string>
    <string name="identifiant">Identifiant</string>
    <string name="soci_t">Société</string>
    <string name="capacit">Capacité</string>
    <string name="destination">Destination</string>
    <string name="valider">Valider</string>
    <string name="bateau">Bateau :</string>
    <string name="ajout_d_une_soci_t">Ajout d\'une société</string>
    <string name="nom_contact">Nom contact</string>
    <string name="adresse">Adresse</string>
    <string name="mail_contact">Mail contact</string>
    <string name="tel_contact">Tel contact</string>
    <string name="ajouter">Ajouter</string>
    <string name="d_chargement_des_containers">Déchargement des containers</string>
    <string name="choix_du_language">Choix du language</string>
    <string name="english">English</string>
    <string name="francais">Francais</string>
    <string name="german">German</string>
    <string name="container_id">Container Id</string>
    <string name="contenu">Contenu</string>
    <string name="dangers">Dangers</string>
    <string name="d_charger_le_container">Décharger le container</string>
    <string name="voir_graphique">Voir Graphique</string>
    <string name="graphiques_statistiques">Graphiques statistiques</string>
    <string name="histogramme_des_containers">Histogramme des containers</string>
    <string name="r_partition_des_containers">Répartition des containers</string>
    <string name="afficher_histogramme">Afficher histogramme</string>
    <string name="afficher_pie">Afficher Pie</string>
</resources>